--- a/front/components/user-info/user-info.html
+++ b/front/components/user-info/user-info.html
@@ -21,7 +21,7 @@ Polymer('user-info', {
    },
 
    domReady: function() {
-      setTimeout(function() { this.user = 'alfino27'; }.bind(this), 1000)
+      this.user = 'alfino27';
    },
 
    handleArtists: function(evt) {
