--- a/front/components/artist-info/artist-info.html
+++ b/front/components/artist-info/artist-info.html
@@ -35,7 +35,7 @@
          </div>
       </core-collapse>
       <core-ajax id="ajax"
-         url="http://localhost:5000/counts?user={{ user }}&artist={{ artist | escape }}&mbid={{ mbid }}"
+         url="{{ host }}/counts?user={{ user }}&artist={{ artist | escape }}&mbid={{ mbid }}"
          handleAs="json" loading="{{ loading }}" on-core-response="{{ loadChart }}"
       ></core-ajax>
       <paper-toast id="toast" text="error"></paper-toast>
@@ -60,6 +60,10 @@ Polymer('artist-info', {
       this.albums = [];
    },
 
+   domReady: function() {
+      this.host = utils.host;
+   },
+
    toggleCollapse: function() {
       if (!this.lastChart && !this.loading && this.user && this.artist) {
          this.$.ajax.go();
@@ -78,7 +82,6 @@ Polymer('artist-info', {
       }
 
       var domain = utils.getDomain(histograms);
-
       var chartData = [];
       var i = 0;
       this.albums = [];
